Large Vending Machine textures, and ticket reworks